fixed home container main text not contracting properly on smaller screen widths

--- a/src/app/modules/main/containers/home/home.container.scss
+++ b/src/app/modules/main/containers/home/home.container.scss
@@ -10,5 +10,5 @@ margin: 3rem 0rem;
 .home-page-paragraph{
 padding-right: 5rem;
 line-height: 2rem;
-width: 65rem;
+max-width: 65rem;
 }
