--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,13 @@ div, p, h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     flex-wrap: wrap;
 }
+.flex-container-row-start{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 a{
     text-decoration: none;
 }
